CHANGE LOG

??? AIM Version 2.1 for BATTLETECH 1.1.2

* Mod: Remove support code for game version 1.1.1 and before.
* New: Show ammo count in paper doll tooltip.
* New: Balanced ammo usage to reduce chance of ammo explosion.
* New: Auto Jettsion Ammo when they are useless.

2018-07-27 AIM Version 2.0 for BATTLETECH 1.1.2

* Mod: Settings migrated to settings.json and is automatically updated by the mod.
* New: Unlock hit accuracy's 5% step and make odd gunnery useful.
* New: Show current and projected heat and stability number in selection panel and target panel.
* New: Fix and allow to-hit modifier to be a net bonus, instead of capping at no penalty.
* New: Allow height modifier to be net penalty, instead of capping at no bonus.
* New: Display base hit chance of ranged and melee attack and the relevant stat.
* New: Fix Multi-Target back out.
* New: Fix rear armour structure display, and show structural damage through armour.
* New: Fix Grey Head Disease, spread by headshot immune unit to all mechs until load game or restart.
* New: Fix the bug that parts and units has a very low chance to be zombified at 0 HP.
* New: Make sure walk and jump result in same LOS quality (clear/blocked/indirect/none).
* New: Change Line of Fire colours, style (solid/dotted), and width.
* New: Refine (or rough up / flatten) indirect firing arc and jump arc.
* New: Unlock melee positioning: allow all valid spots to be moved to and mechs are not locked in place by melee.
* New: Customise list and order of melee attack modifiers, with new factors such as height and inspired.<br>When used, fix the bug that prone stand up penalty is not actually applied to melee.
* New: A rewritten attack log that is faster and supports various level of details including direction, damage, and crit.
* New: (Optional) Change ranged/melee base hit chances and min/max of modified hit chance.