@@ -2,14 +2,21 @@ CHANGE LOG
 
 ??? AIM Version 2.1 for BATTLETECH 1.1.2
 
-* Mod: Remove support code for game version 1.1.1 and before.
+* Big: Remove support code for game version 1.1.1 and before.
+* New: Change Line of Fire colours by attack direction.
+* New: Change arc colour of facing indicators.
 * New: Show ammo count in paper doll tooltip.
 * New: Balanced ammo usage to reduce chance of ammo explosion.
 * New: Auto Jettsion Ammo when they are useless.
+* New: Customise list and order of ranged attack modifiers, fixing inconsistency.
+* New: Directional attack modifier - get accuracy bonus for attacking from side or rear.
+* New: Attack Log now logs Round and Phase.
+* Mod: New logging code that formats and write logs in the background and will not cause the game to lag.
+* Mod: Attack logs are now automatically archived, with a total size limit also managed in the background.
 
 2018-07-27 AIM Version 2.0 for BATTLETECH 1.1.2
 
-* Mod: Settings migrated to settings.json and is automatically updated by the mod.
+* Big: Settings migrated to settings.json and is automatically updated by the mod.
 * New: Unlock hit accuracy's 5% step and make odd gunnery useful.
 * New: Show current and projected heat and stability number in selection panel and target panel.
 * New: Fix and allow to-hit modifier to be a net bonus, instead of capping at no penalty.
